@@ -12,3 +12,6 @@
 			//·Cliente se encarga de leer el teclado y gestionar el bot y enviar la información a servidor mediante una FIFO.
 			//·Servidor se encarga de la logica del juego y de actualizar el logger, ademas envia los datos de los objetos al 				   cliente mediante una FIFO. La lectura del cliente se implementa en un thread aparte.
 			//Añadido el tratamiento de las señales: SIGINT, SIGTERM, SIGPIPE, SIGUSR1.
+
+15/12/15 16:24 Tomas	//Implemetación de la comunicación entre programas mediante el uso de Sockets.
+			//Funcionalidad añadida que cierra el servidor si se cierra el cliente.
